# config/routes.rb
@@ -6,7 +6,7 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
-      resources :candidates, only: %i[create index]
+      resources :candidates, only: %i[create index show]
     end
   end
 
