# swagger/v1/swagger.yaml
@@ -82,6 +82,36 @@ paths:
               - name
               - email
               - birthdate
+  "/api/v1/candidates/{id}":
+    get:
+      summary: Retrieves a candidate
+      tags:
+      - Candidates
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Candidate found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+                  email:
+                    type: string
+                  birthdate:
+                    type: string
+                    format: date
+        '404':
+          description: Candidate not found
 servers:
 - url: http://localhost:3000
   description: The local server
